<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Main Activity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="clear">Clear All Favorites</string>
    <string name="setup">Setup Username</string>
    <string name="exit">Exit</string>
    <string name="title_activity_username">Username Activity</string>
    <string name="name">Enter Username</string>
    <string name="value"></string>
    <string name="button">Set Username</string>
    <string name="title_activity_movies">Movies Activity</string>
    <string name="title_activity_movie">Movie Activity</string>
    <string name="text1">text1</string>
    <string name="title"></string>
    <string name="mpaa"></string>
    <string name="genre"></string>
    <string name="audience">Audience</string>
    <string name="critics">Critics</string>
    <string name="audiencerating"></string>
    <string name="criticsrating"></string>
    <string name="title_activity_movie_web">MovieWeb Activity</string>
    <string name="title_activity_statistics">Statistics Activity</string>
    <string name="contentimage">content</string>
    <string name="contentimage2">content2</string>
    <string name="contentimage3">content3</string>
    <string name="back">back</string>
    <string name="aud">audience</string>
    <string name="globe">globe</string>
    <string name="movielist">movielist</string>
    <string name="movielist2">movielist2</string>
    <string name="content3">content3</string>

</resources>
