<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MovieActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margintop"
        android:gravity="center"
        android:text="@string/title"
        android:textSize="@dimen/titletext"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="@dimen/widthheight"
        android:layout_height="@dimen/widthheight"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margintop2"
        android:contentDescription="@string/contentimage" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margintop6"
        android:text="@string/mpaa"
        android:textColor="#CC0033" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:paddingBottom="@dimen/paddingbottom"
        android:paddingTop="@dimen/paddingbottom"
        android:text="@string/genre" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView3"
        android:layout_marginLeft="@dimen/marginleft2"
        android:text="@string/audience"
        android:textSize="@dimen/textsize2"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3"
        android:layout_marginLeft="@dimen/marginleft"
        android:layout_toRightOf="@+id/textView4"
        android:paddingLeft="@dimen/padding"
        android:text="@string/critics"
        android:textSize="@dimen/textsize"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/textView4"
        android:layout_below="@+id/textView4"
        android:layout_marginRight="@dimen/marginright"
        android:layout_marginTop="@dimen/margintop7"
        android:text="@string/audiencerating" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_alignTop="@+id/textView6"
        android:layout_marginRight="@dimen/marginright3"
        android:layout_toRightOf="@+id/textView6"
        android:contentDescription="@string/aud" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/textView5"
        android:layout_alignTop="@+id/imageView2"
        android:layout_marginRight="@dimen/marginright2"
        android:text="@string/criticsrating" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="@dimen/widthheight4"
        android:layout_height="@dimen/widthheight4"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/textView7"
        android:layout_marginRight="@dimen/marginright4"
        android:contentDescription="@string/contentimage3" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="@dimen/widthheight2"
        android:layout_height="@dimen/margintop3"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/imageView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margintop4"
        android:contentDescription="@string/globe"
        android:gravity="center"
        android:src="@drawable/globe" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="@dimen/widthheight2"
        android:layout_height="@dimen/widthheight3"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView6"
        android:layout_marginTop="@dimen/margintop3"
        android:layout_toLeftOf="@+id/textView6"
        android:contentDescription="@string/back"
        android:src="@drawable/back" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="@dimen/widthheight2"
        android:layout_height="@dimen/widthheight3"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignRight="@+id/imageView3"
        android:layout_alignTop="@+id/imageView5"
        android:layout_marginTop="@dimen/margintop5"
        android:contentDescription="@string/contentimage2"
        android:src="@drawable/stars" />

</RelativeLayout>
